02.ticketing/infra/k8s/auth-mongo.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo # from docker hub > mongo
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service

spec:
  selector:
    app: auth-mongo
  type: ClusterIP
  ports:
    - name: db
      protocol: TCP
      port: 27017 # default mongo port
      targetPort: 27017
