02.ticketing/infra/k8s/tickets-mongo.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo # from docker hub > mongo
          # resources:
          #   limits:
          #     memory: 512Mi
          #     cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-service

spec:
  selector:
    app: tickets-mongo
  type: ClusterIP
  ports:
    - name: db
      protocol: TCP
      port: 27017 # default mongo port
      targetPort: 27017
